# standup-plugin

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs
wit/: deps.toml  world.wit
