[package]
name = "standup-plugin"
edition = "2021"
version = "0.3.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
reqwest = { git = "https://github.com/brooksmtownsend/reqwest", branch = "feat/wasi-p2-component-support", features = ["stream"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasi = "=0.13.1"
wit-bindgen = "0.30"

# https://github.com/servo/rust-url/pull/960
[patch.crates-io]
url = { git = "https://github.com/brooksmtownsend/rust-url/", branch = "fix/support-wasm32-wasi"}
form_urlencoded = { git = "https://github.com/brooksmtownsend/rust-url/", branch = "fix/support-wasm32-wasi"}

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true