[package]
name = "standup-plugin"
edition = "2021"
version = "0.3.1"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
reqwest = { git = "https://github.com/brooksmtownsend/reqwest", branch = "feat/wasi-p2-component-support", default-features = false, features = ["stream"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
wasi = { version = "=0.13.1", default-features = false }
wit-bindgen = { version = "0.30", default-features = false, features = ["macros"] }

# https://github.com/servo/rust-url/pull/960
[patch.crates-io]
url = { git = "https://github.com/brooksmtownsend/rust-url/", branch = "fix/support-wasm32-wasi"}
form_urlencoded = { git = "https://github.com/brooksmtownsend/rust-url/", branch = "fix/support-wasm32-wasi"}

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true